# github-runner-ec2-attestation-caller

./: .gitignore  README.md  SECURITY_REVIEW.md  pyproject.toml
.github/scripts/: call_remote_executor.py  pyproject.toml  sample-build.sh  verify_isolation.py
.github/scripts/call_remote_executor/: __init__.py  __main__.py  artifact.py  attestation.py  caller.py  cli.py  encryption.py  errors.py
.github/workflows/: call-remote-executor.yml
.kiro/specs/gha-remote-executor-caller/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/server-security-test-script/: .config.kiro  design.md  requirements.md  tasks.md
scripts/: sample-build.sh  security-checks.sh  security_check_parser.py
tests/: __init__.py  server_encryption_helper.py  test_artifact.py  test_artifact_properties.py  test_caller_properties.py  test_caller_unit.py  test_security_check_parser_properties.py  test_security_check_parser_unit.py
