[project]
name = "gha-remote-executor-caller"
version = "0.1.0"
description = "GitHub Actions Remote Executor Caller - client-side caller for the Remote Executor system"
requires-python = ">= 3.11"

dependencies = [
    "requests>=2.31.0",
    "cbor2>=5.6.0",
    "pycose>=1.0.0",
    "pyOpenSSL>=23.0.0",
    "pycryptodome>=3.19.0",
    "cryptography>=41.0.0",
    "wolfcrypt>=5.7.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["call_remote_executor"]
include = ["call_remote_executor/**/*.py", "verify_isolation.py"]
